Version 2.6.0 - 2012-10-22
* Bug fixes (see mercurial logs for details)
* Allow to paste in editable list view
* Manage readonly state on group
* Remove "Please wait" box
* Refactorize date widgets
* Manage tuple on Reference
* Add constant interpolation on line graph
* Make Import/Export Data no-modal
* Deactivate switch view button when there is only 1 view
* Manage create/delete field access
* Add dynamic size limit on the One2Many, Many2Many and Char
* Search only on fields in XML view
* Cache action keyword
* Always use cached views
* Manage model access
* Manage time format
* Deactivate attachment button when record is not created

Version 2.4.0 - 2012-04-23
* Bug fixes (see mercurial logs for details)
* Remove workflow
* Improve contextual menu:
    - Actions for all relation fields on list view
    - Use icons
    - Add attachments entry
* Use RPCProgress almost everywhere
* Add a simple search box
* New domain parser using shlex
* Better translation dialog box
* Add the richtext widget for WYSIWYG Editor on text fields
* Add a record pool to prefetch more records
* Add Time widget
* Add support for fuzzy_translation
* Activate save button on editing
* Refactor set/get and set/get_client of fields
* Display binary size alongside the buttons in treeview
* Set correctly the focus on tab switching
* Add shortcut to focus search entry
* Add binary field to tree views
* Improve board view:
    - use the same search widget as form
    - link double click to open popup

Version 2.2.0 - 2011-10-24
* Bug fixes (see mercurial logs for details)
* New search widget
* Improve memory management of Binary fields
* Support buffer for Binary fields
* Remove delete on Escape in editable tree
* Use JSON-RPC
* Limit size of field when possible
* Add xalign and yalign as fields attributes
* Convert many popup to be no-modal
* Add window manager for:
    - replace current window
    - prevent simmilar window
* Merge and review toolbars in form and board