@@ -1,3 +1,5 @@
+* Allow multi-selection for Selection field in filter box
+
 Version 2.6.0 - 2012-10-22
 * Bug fixes (see mercurial logs for details)
 * Allow to paste in editable list view
